# websensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_custom.csv  sdkconfig.defaults
components/rest/: .eil.yml  CMakeLists.txt  handlers.c  handlers.h  peripheral.c  peripheral.h  rest.c  rest.h
components/softap/: CMakeLists.txt  softap.c  softap.h
components/storage/: .eil.yml  CMakeLists.txt  repo.c  repo.h  sdmmc.c  semihost.c  spiffs.c  spiffs.h  storage.c  storage.h  test.c  test.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
ui/quasar/: README.md  install.sh  jsconfig.json  package-lock.json  package.json  quasar.config.js
ui/quasar/src-cordova/: config.xml  package.json
ui/quasar/src/components/: EssentialLink.vue  GearInner.vue  LoadInner.vue  WaitSpinner.vue
ui/quasar/src/css/: app.scss
ui/quasar/src/layouts/: MainLayout.vue
ui/quasar/src/pages/: AhtPage.vue  AhtSensor.vue  Bmx280Page.vue  Ds18b20Page.vue  SetPage.vue  SetPeriod.vue
ui/quasar/src/router/: index.js  routes.js
ui/quasar/src/stores/: aht.js  bmx280.js  ds18b20.js  index.js  layout.js
ui/quasar/src/stores/aht/: index.js
ui/quasar/src/stores/layout/: index.js
ui/vuetify/: install.sh  jsconfig.json  package-lock.json  package.json
ui/vuetify/public/: index.html
ui/vuetify/src/: App.vue  store.js
ui/vuetify/src/components/: Aht.vue  Ds18b20.vue
ui/web/: package-lock.json  package.json
ui/web/src/: App.vue  main.js  router.js  store.js
ui/web/src/components/: Aht.vue  Bmx280.vue  Ds18b20.vue  Settings.vue  Wait.vue  WaitSpinner.vue
(+1 files in other folders)
